--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <title>Komputer Store</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Komputer Store</h1>
+    <ul>Komputer Store</ul>
 </body>
 </html>
