--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>Komputer Store</ul>
+    <div class="header">Komputer Store</div>
+    <div class="parent">
+        <div class="card">
+            <h2>Bank</h2>
+        </div>
+        <div class="card">
+            <h2>Work</h2>
+        </div>
+        <div class="card">
+            <h2>Laptop</h2>
+        </div>
+    </div>
+    <div class="card">
+        <h2>Laptop info</h2>
+    </div>
+
 </body>
 </html>
