--- a/index.html
+++ b/index.html
@@ -5,16 +5,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">Komputer Store</div>
+    <script type="text/javascript" src="bank.js"></script>
+    <div class="header">
+        <h1>KomputerStore</h1>
+    </div>
     <div class="parent">
+        <!-- Bank balance -->
         <div class="card">
             <h2>Bank</h2>
+            <div class="balance">
+                Balance
+            </div>
+            <div class="loan">
+                Loan
+            </div>
+            <button>Get a loan</button>
         </div>
+        <!-- Work and earn money -->
         <div class="card">
             <h2>Work</h2>
+            <p>
+                work work work
+            </p>
         </div>
+        <!-- Laptops avaliable to buy (via API) -->
         <div class="card">
             <h2>Laptop</h2>
+            <p>
+                <select id="laptop-dropdown">
+                </select>
+            </p>
         </div>
     </div>
     <div class="card">
