Added loan function

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <div class="card">
             <h2>Bank</h2>
             <p>Balance: <span id="bankSum"></span></p>
-            <p>Loan <span id="loan"></span></p> not visible!
-            <p class="center"><button>Get a loan</button></p>           
+            <p>Loan <span id="loanSum"></span></p> not visible!
+            <p class="center">
+                <button id="loanButton">Get a loan</button>
+            </p>           
         </div>
 
         <!-- Work and earn money -->
