--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Balance: <span id="bankSum"></span></p>
             <p>Loan <span id="loanSum"></span></p> not visible!
             <p class="center">
-                <button id="loanButton">Get a loan</button>
+                <button class="redButton" id="loanButton">Get a loan</button>
             </p>           
         </div>
 
@@ -24,9 +24,12 @@
         <div class="card">
             <h2>Work</h2>
             <p>Pay <span id="workSum"></span> kr</p>
-            <p class="center"><button id="bankButton">Bank</button><button id="workButton">Work</button></p> 
+            <p class="center">
+                <button id="bankButton" class="greenButton">Bank</button>
+                <button id="workButton" class="blueButton">Work</button></p> 
         </div>
-        <!-- Laptops avaliable to buy (via API) -->
+
+        <!-- Compupters avaliable to buy (via API) -->
         <div class="card">
             <h2>Laptops</h2>
             <p>
@@ -38,17 +41,19 @@
             </div>
         </div>
     </div>
+
+    <!-- Info about selected computer & buy button -->
     <div class="card">
         <table>
             <tr>
-                <td></td>
-                <td><h2><span id="title"></span></h2></td>
-                <td><h2><span id="price"></span></h2></td>
-            </tr>
-            <tr>
-                <td><div class="image" id="image"></div></td>
-                <td><p><span id="description"></span></p></td>
-                <td><button>Buy it!</button></td>
+                <td><img id="computerImage"></td>
+                <td>
+                    <h2><span id="title"></span></h2>
+                    <p><span id="description"></span></p>
+                </td>
+                <td><h2><span id="price"></span></h2>
+                    <p><button class="greenButton">Buy!</button></p>
+                </td>
             </tr>
         </table>      
         
