added pay loan function

--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
         <div class="card">
             <h2>Work</h2>
             <p><span id="workSum"></span></p>
-            <div>
+            <p class="center">
                 <button id="bankButton" class="greenButton">Bank</button>
                 <button id="workButton" class="blueButton">Work</button>
-            </div> 
+            </p>
+            <p class="center">
+                <button class="redButton" id="payLoanButton">Pay loan</button>
+            </p>
         </div>
 
         <!-- Compupters avaliable to buy (via API) -->
