added function for broken image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <p><span id="description"></span></p>
                     </td>
                     <td><h2><span id="price"></span></h2>
-                        <p><button class="greenButton">Buy!</button></p>
+                        <p><button class="greenButton" id="buyButton">Buy!</button></p>
                     </td>
                 </tr>
             </table>
