--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <button id="bankButton" class="greenButton">Bank</button>
                 <button id="workButton" class="blueButton">Work</button>
             </p>
-            <p class="center">
+            <div class="center">
                 <button class="redButton" id="payLoanButton">Pay loan</button>
-            </p>
+            </div>
         </div>
 
         <!-- Compupters avaliable to buy (via API) -->
